java-17: adapt to JDK 17 (fixed thread pool, getFirst->get0, scripts release 17)